'0209-用户模块、JWT认证'

--- a/.env.development
+++ b/.env.development
@@ -3,8 +3,8 @@ MONGODB_URI=mongodb://localhost:27017/AI-interview
 DB_Type=mongodb
 
 # JWT配置
-JWT_SECRET=eeKey
-JWT_EXPIRES_IN=24h
+JWT_SECRET=eeKeylxy
+JWT_EXPIRES_IN=7d
 
 # 服务器配置
 PORT=3000
