--- a/package.json
+++ b/package.json
@@ -32,15 +32,18 @@
     "@nestjs/passport": "11.0.5",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/swagger": "^11.2.6",
+    "axios": "^1.13.5",
     "bcryptjs": "^3.0.3",
     "class-transformer": "0.5.1",
     "class-validator": "^0.14.2",
     "dotenv": "^17.2.3",
     "joi": "^18.0.2",
     "langchain": "1.2.19",
+    "mammoth": "^1.11.0",
     "mongoose": "^9.1.5",
     "passport": "0.7.0",
     "passport-jwt": "4.0.1",
+    "pdf-parse": "^1.1.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "swagger-ui-express": "^5.0.1",
